<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="barros.jeferson.nanodegreeprojeto01.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgView"
            android:src="@drawable/background_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:text="@string/nome_empresa"
            android:background="#40000000"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgView"/>

    </RelativeLayout>

    <!-- <TextView
        android:text="@string/contato_empresa"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_call_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"/>

        <TextView
            android:text="@string/telefone_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_email_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"/>

        <TextView
            android:text="@string/email_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_public_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"/>

        <TextView
            android:text="@string/site_empresa"
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"/>

        <TextView
            android:text="@string/endereco_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <TextView
        android:text="@string/servicos"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lista_servicos"
        android:lines="4"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
